// from https://github.com/nutsfinance/solidity-protobuf/blob/master/protobuf-solidity/src/protoc/include/SolidityTypes.proto
// for use for uint128/etc and address integrated with solidty

syntax = "proto3";

package solidity;

option go_package = "github.com/datachainlab/solidity-protobuf/protobuf-solidity/src/protoc/go;solidity";

// Structures for representing Solidity's native primitive types
// borrow from shmookey/solpb and remove some definitions,
// which should compatible with pb native type (eg. string/bool/uint32/uint64)
// or other solidity type (eg. uint/int)
message address { bytes data = 1; }
message uint8   { bytes data = 1; }
message uint16   { bytes data = 1; }
message uint24   { bytes data = 1; }
message uint32   { bytes data = 1; }
message uint40   { bytes data = 1; }
message uint48   { bytes data = 1; }
message uint56   { bytes data = 1; }
message uint64   { bytes data = 1; }
message uint72   { bytes data = 1; }
message uint80   { bytes data = 1; }
message uint88   { bytes data = 1; }
message uint96   { bytes data = 1; }
message uint104   { bytes data = 1; }
message uint112   { bytes data = 1; }
message uint120   { bytes data = 1; }
message uint128   { bytes data = 1; }
message uint136   { bytes data = 1; }
message uint144   { bytes data = 1; }
message uint152   { bytes data = 1; }
message uint160   { bytes data = 1; }
message uint168   { bytes data = 1; }
message uint176   { bytes data = 1; }
message uint184   { bytes data = 1; }
message uint192   { bytes data = 1; }
message uint200   { bytes data = 1; }
message uint208   { bytes data = 1; }
message uint216   { bytes data = 1; }
message uint224   { bytes data = 1; }
message uint232   { bytes data = 1; }
message uint240   { bytes data = 1; }
message uint248   { bytes data = 1; }
message uint256   { bytes data = 1; }

message int8   { bytes data = 1; }
message int16   { bytes data = 1; }
message int24   { bytes data = 1; }
message int32   { bytes data = 1; }
message int40   { bytes data = 1; }
message int48   { bytes data = 1; }
message int56   { bytes data = 1; }
message int64   { bytes data = 1; }
message int72   { bytes data = 1; }
message int80   { bytes data = 1; }
message int88   { bytes data = 1; }
message int96   { bytes data = 1; }
message int104   { bytes data = 1; }
message int112   { bytes data = 1; }
message int120   { bytes data = 1; }
message int128   { bytes data = 1; }
message int136   { bytes data = 1; }
message int144   { bytes data = 1; }
message int152   { bytes data = 1; }
message int160   { bytes data = 1; }
message int168   { bytes data = 1; }
message int176   { bytes data = 1; }
message int184   { bytes data = 1; }
message int192   { bytes data = 1; }
message int200   { bytes data = 1; }
message int208   { bytes data = 1; }
message int216   { bytes data = 1; }
message int224   { bytes data = 1; }
message int232   { bytes data = 1; }
message int240   { bytes data = 1; }
message int248   { bytes data = 1; }
message int256   { bytes data = 1; }

// fixed bytes (really needed?)
message bytes1  { bytes data = 1; }
message bytes2  { bytes data = 1; }
message bytes3  { bytes data = 1; }
message bytes4  { bytes data = 1; }
message bytes5  { bytes data = 1; }
message bytes6  { bytes data = 1; }
message bytes7  { bytes data = 1; }
message bytes8  { bytes data = 1; }
message bytes9  { bytes data = 1; }
message bytes10 { bytes data = 1; }
message bytes11 { bytes data = 1; }
message bytes12 { bytes data = 1; }
message bytes13 { bytes data = 1; }
message bytes14 { bytes data = 1; }
message bytes15 { bytes data = 1; }
message bytes16 { bytes data = 1; }
message bytes17 { bytes data = 1; }
message bytes18 { bytes data = 1; }
message bytes19 { bytes data = 1; }
message bytes20 { bytes data = 1; }
message bytes21 { bytes data = 1; }
message bytes22 { bytes data = 1; }
message bytes23 { bytes data = 1; }
message bytes24 { bytes data = 1; }
message bytes25 { bytes data = 1; }
message bytes26 { bytes data = 1; }
message bytes27 { bytes data = 1; }
message bytes28 { bytes data = 1; }
message bytes29 { bytes data = 1; }
message bytes30 { bytes data = 1; }
message bytes31 { bytes data = 1; }
message bytes32 { bytes data = 1; }
